# DuckCoinCoin

./: .gitignore  README.md
exemples/: blockchain.json.txt  sha256exemple.py
src/level-1/(old)dcc-c/: cmake_install.cmake  ddc_c  main.c
src/level-1/(old)dcc-c/database/: Block.c  Block.h  Transaction.c
src/level-1/1-dcc-c/: 1_dcc_c  1_dcc_c.cbp  CMakeCache.txt  CMakeLists.txt  Config.h  Makefile  cmake_install.cmake  main.c
src/level-1/1-dcc-c/1_dcc_c.dSYM/Contents/: Info.plist
src/level-1/1-dcc-c/1_dcc_c.dSYM/Contents/Resources/DWARF/: 1_dcc_c
src/level-1/1-dcc-c/c-lib/sha256/: sha256_utils.c
src/level-1/1-dcc-c/database/: Blockchain.c  Blockchain.h  Transaction.c  Transaction.h
src/level-1/1-dcc-c/error/: Error.c  Error.h
src/level-1/1-dcc-c/gui/: Term_canon.c  Term_canon.h  gui.c  gui.h
src/level-1/1-dcc-c/processing/: Hash.c  Hash.h  Merkel_Hash.c  Merkel_Hash.h
src/level-1/1-dcc-c/utils/: blockchain_utils.c  blockchain_utils.h
src/level-1/1-dcc-java/: README.md
src/level-1/1-dcc-java/blockchain/: App.java  Block.java  Blockchain.java  Genesis.java  Json.java  MerkleTree.java  Transaction.java
src/level-1/1-dcc-java/src/blockchain/: App.java  Block.java  Blockchain.java  Genesis.java  Hash.java  Transaction.java
src/level-1/dcc-c/: Block.c  Block.h  Blockchain.c  Blockchain.h  CMakeCache.txt  CMakeLists.txt  Makefile  Transaction.c  Transaction.h  main  main.c
src/level-1/dcc-c/database/: Block.c  Block.h  Blockchain.c  Blockchain.h  Transaction.c  Transaction.h
src/level-1/ddc-c/: CMakeLists.txt  main.c
(+9 files in other folders)
